Attempt to fix spacing issue in portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,9 @@
 }
 
 html, body {
-	height: 100vh;
-	width: 100vw;
-  overflow-x: hidden !important;
+	height: 100%;
+	width: 100%;
+  /*overflow-x: hidden !important;*/
 
 }
 
